# temt

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: dev.yml  relase.yml  test.yml
src/: main.cpp
src/temt/: ArchiveManip.cpp  ArchiveManip.hpp  CharProcessing.cpp  CharProcessing.hpp  DiskInfo.cpp  DiskInfo.hpp  FileManip.cpp  FileManip.hpp  LogInitializer.cpp  LogInitializer.hpp  app_data.cpp  app_data.hpp  borderless_button.cpp  borderless_button.hpp  emoji_util.hpp  file_browser.cpp  file_browser.hpp  hideable.cpp  hideable.hpp  main_app.cpp  main_app.hpp  main_panel.cpp  main_panel.hpp  options_menu.cpp  options_menu.hpp  text_editor.cpp  text_editor.hpp  text_writer.cpp  text_writer.hpp
tests/: tests.cpp
